# mruntime

./: CMakeLists.txt  README.md  component.yaml
include/mruntime/: clock.h  mruntime.h  node.h  node_config.h  node_state.h  process.h  types.h
src/: CMakeLists.txt  clock.cpp  mruntime.cpp  node.cpp  process.cpp
